[gd_scene load_steps=3 format=3 uid="uid://cqwg0f86fagu6"]

[ext_resource type="Script" uid="uid://cvyi20he6pl8b" path="res://Scripts/CharacterCreation.gd" id="1_iu6p7"]
[ext_resource type="Texture2D" uid="uid://durbgl5k0kkye" path="res://Assets/2206_w023_n003_2469b_p1_2469.jpg" id="2_tuea2"]

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchor_left = 0.406
anchor_top = 0.5
anchor_right = 50.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_iu6p7")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -827.712
offset_top = -371.0
offset_right = 1948.2881
offset_bottom = 822.0
texture = ExtResource("2_tuea2")
expand_mode = 1

[node name="GenderSelection" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Male" type="Button" parent="GenderSelection"]
layout_mode = 2
text = "He/Him"

[node name="Female" type="Button" parent="GenderSelection"]
layout_mode = 2
text = "She/Her"

[node name="Other" type="Button" parent="GenderSelection"]
layout_mode = 2
text = "They/Them"

[node name="Confirm" type="Button" parent="."]
layout_mode = 0
offset_left = 71.288025
offset_top = 91.0
offset_right = 142.28802
offset_bottom = 122.0
text = "Confirm
"

[connection signal="pressed" from="GenderSelection/Male" to="." method="_on_male_pressed"]
[connection signal="pressed" from="GenderSelection/Female" to="." method="_on_female_pressed"]
[connection signal="pressed" from="GenderSelection/Other" to="." method="_on_other_pressed"]
[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
